k8s/main/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musicbook-be-k8s
  namespace: musicbook
spec:
  selector:
    matchLabels:
      app: musicbook-be-k8s
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: musicbook-be-k8s
    spec:
      imagePullSecrets:
      - name: aws-secret
      containers:
      - name: musicbook-be-k8s
        image: 597014485214.dkr.ecr.ap-northeast-2.amazonaws.com/musicbook-be-k8s:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
          requests:
            cpu: "0.2"
            memory: 128Mi
