k8s/main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: musicbook-be-k8s-svc
  namespace: musicbook
spec:
  type: ClusterIP
  ports:
    - port: 5500
      targetPort: 5500
  selector:
    app: musicbook-be-k8s
